@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-10-31 mmichaud <michael.michaud@free.fr>
+  * Fix ValidatorTestCase broken by the recent change I made on the 
+    ValidateSelectedLayersPlugIn (2012-10-28)
+
 2012-10-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * Upgrade Italian language file
 
